Remove unused code, suppress warnings, and make internal things package private